# Ai-Eshi-Sooq

./: README.md  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt
ai_eshi_sooq/: asgi.py  settings.py  urls.py  wsgi.py
posts/: models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_remove_post_phone_number.py  0003_post_phone_number.py  0004_post_user_id.py  0005_auto_20201016_1242.py
