[tool.poetry]
name = "ai-eshi-sooq"
version = "0.1.0"
description = ""
authors = ["azez-alhoot <azezalhoot82@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.2"
djangorestframework = "^3.12.1"
django-cors-headers = "^3.5.0"
whitenoise = "^5.2.0"
django-phone-field = "^1.8.1"
django-phonenumber-field = "^5.0.0"
psycopg2-binary = "^2.8.6"
gunicorn = "^20.0.4"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
